v2.3.0:
- Added: a user prompt that allows displaying the changelog for new script updates on demand.
- Added: support for a new API to check for ModsUpdater updates.
- Added: Improved console output with clickable links and better-centered text.
- Fixed: Resolved issues with misaligned text in the console display.
- Fixed: Removed unused code and imports for better performance and readability.
- Changed: The game version display has been rephrased for better clarity.

v2.2.2:
- Improved the configuration for the game version. The program now automatically uses the latest version of the game if no specific version is indicated in `config.ini`.
- For clarity, the `config.ini` file now shows 'latest_version' instead of being empty when this option is selected.

v2.2.1:
- Fixed: a bug that caused the application to crash when using the --force-update option on mods that did not have a new version available.
- Fixed: Addressed an issue where progress messages for specific modlist exports (PDF, JSON) would run even when their respective --no- flags were used.
- Fixed: Restructured the export logic to ensure command-line arguments are parsed only once and correctly passed to all export functions.
- Featured: - The `install-modlist` command now shows the name of the mod being downloaded in the progress bar.

v2.2.0:
- Added: --force-update argument: Added a new command-line argument that forces a re-download and re-installation of all mods, even if their versions are already up to date. This is useful for repairing corrupted files or performing a clean install.
- Added: Update date and time are now displayed in updated_mods_changelog.txt
- Added: Added a new command-line argument (--install-mods) to download all mods listed in modlist.json to the designated mods folder.
- Fixed an issue where the warning message for an empty mods directory was not displaying the directory path correctly.